chore: test more rest-api and saving/reading from file
It currently does not work, files are not being written to